# Skillbox

./: .gitignore
20modul/modul_20.1/: modul_20.1.sln
20modul/modul_20.1/modul_20.1/: data.txt  modul_20.1.cpp  modul_20.1.vcxproj  modul_20.1.vcxproj.filters
20modul/modul_20.2/: modul_20.2.sln
20modul/modul_20.2/modul_20.2/: modul_20.2.cpp  modul_20.2.vcxproj  modul_20.2.vcxproj.filters  pic.txt
20modul/modul_20.3/: modul_20.3.sln
20modul/modul_20.3/modul_20.3/: modul_20.3.cpp  modul_20.3.vcxproj  modul_20.3.vcxproj.filters
20modul/modul_20.4/: modul_20.4.sln
20modul/modul_20.4/modul_20.4/: modul_20.4.cpp  modul_20.4.vcxproj  modul_20.4.vcxproj.filters
21modul/modul_21.1/: modul_21.1.sln
21modul/modul_21.1/modul_21.1/: modul_21.1.cpp  modul_21.1.vcxproj  modul_21.1.vcxproj.filters
21modul/modul_21.2/: modul_21.2.sln
21modul/modul_21.2/modul_21.2/: modul_21.2.cpp  modul_21.2.vcxproj  modul_21.2.vcxproj.filters
21modul/modul_21.3/: modul_21.3.sln
21modul/modul_21.3/modul_21.3/: modul_21.3.cpp  modul_21.3.vcxproj  modul_21.3.vcxproj.filters
21modul/modul_21.4/: modul_21.4.sln
21modul/modul_21.4/modul_21.4/: modul_21.4.cpp  modul_21.4.vcxproj  modul_21.4.vcxproj.filters
22modul/modul_22.1/: modul_22.1.sln
22modul/modul_22.1/modul_22.1/: modul_22.1.cpp  modul_22.1.vcxproj  modul_22.1.vcxproj.filters
22modul/modul_22.2/: modul_22.2.sln
22modul/modul_22.2/modul_22.2/: modul_22.2.cpp  modul_22.2.vcxproj  modul_22.2.vcxproj.filters
22modul/modul_22.3/: modul_22.3.sln
22modul/modul_22.3/modul_22.3/: modul_22.3.cpp  modul_22.3.vcxproj  modul_22.3.vcxproj.filters
23modul/modul_23.1/: modul_23.1.sln
23modul/modul_23.1/modul_23.1/: modul_23.1.cpp  modul_23.1.vcxproj  modul_23.1.vcxproj.filters
23modul/modul_23.2/: modul_23.2.sln
23modul/modul_23.2/modul_23.2/: modul_23.2.cpp  modul_23.2.vcxproj  modul_23.2.vcxproj.filters
23modul/modul_23.3/: modul_23.3.sln
23modul/modul_23.3/modul_23.3/: modul_23.3.cpp  modul_23.3.vcxproj  modul_23.3.vcxproj.filters
24modul/modul_23.1/: modul_23.1.sln
24modul/modul_23.1/modul_23.1/: modul_23.1.cpp  modul_23.1.vcxproj
24modul/modul_24.2/: modul_24.2.sln
24modul/modul_24.2/modul_24.2/: modul_24.2.cpp  modul_24.2.vcxproj  modul_24.2.vcxproj.filters
24modul/modul_24.3/: modul_24.3.sln
24modul/modul_24.3/modul_24.3/: modul_24.3.cpp  modul_24.3.vcxproj  modul_24.3.vcxproj.filters
25modul/modul_25.1/: CMakeLists.txt
25modul/modul_25.1/modul_25.1/: CMakeLists.txt  instruments.h  main.cpp  point.h
25modul/modul_25.2/: CMakeLists.txt
25modul/modul_25.2/modul_25.2/: CMakeLists.txt  cpu.cpp  cpu.h  disk.cpp  disk.h  gpu.cpp  gpu.h  kbd.cpp  kbd.h  main.cpp  ram.cpp  ram.h
26modul/modul_26.1/: CMakeLists.txt
26modul/modul_26.1/modul_26.1/: CMakeLists.txt  main.cpp  player.cpp  player.h  track.cpp  track.h
26modul/modul_26.2/: CMakeLists.txt
26modul/modul_26.2/modul_26.2/: CMakeLists.txt  main.cpp  phone.cpp  phone.h  record.cpp  record.h
26modul/modul_26.3/: CMakeLists.txt
26modul/modul_26.3/modul_26.3/: CMakeLists.txt  main.cpp  point.cpp  point.h  screen.cpp  screen.h  window.cpp  window.h
27modul/modul_27.1/: CMakeLists.txt
27modul/modul_27.1/modul_27.1/: CMakeLists.txt  branch.cpp  branch.h  elfhouse.cpp  elfhouse.h  main.cpp
27modul/modul_27.2/: CMakeLists.txt
27modul/modul_27.2/modul_27.2/: CMakeLists.txt  circle.cpp  circle.h  figure.cpp  figure.h  main.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  square.cpp  square.h  triangle.cpp  triangle.h
27modul/modul_27.3/: CMakeLists.txt
27modul/modul_27.3/modul_27.3/: CMakeLists.txt  director.cpp  director.h  group.cpp  group.h  main.cpp  manager.cpp  manager.h  worker.cpp  worker.h
28modul/modul_28.1/: CMakeLists.txt  modul_28.1.cpp  swimmer.cpp  swimmer.h
28modul/modul_28.2/: CMakeLists.txt  main.cpp  train.cpp  train.h
28modul/modul_28.3/: CMakeLists.txt  main.cpp  order.cpp  order.h
29modul/modul_29.1/: CMakeLists.txt  main.cpp
30modul/modul_30.1/: CMakeLists.txt  main.cpp
30modul/modul_30.2/: CMakeLists.txt  main.cpp
30modul/modul_30.3/: CMakeLists.txt  main.cpp
30modul/test/: CMakeLists.txt  test.cpp  test.h
31modul/modul_31.1/: CMakeLists.txt  main.cpp
31modul/modul_31.2/: CMakeLists.txt  igraph.h  listgraph.cpp  listgraph.h  main.cpp  matrixgraph.cpp  matrixgraph.h
32modul/modul_32.1/: CMakeLists.txt  main.cpp
32modul/modul_32.3/: CMakeLists.txt  company.pb.cc  company.pb.h  company.proto
33modul/modul_33.1/: CMakeLists.txt  main.cpp
33modul/modul_33.2/: CMakeLists.txt  main.cpp
33modul/modul_33.3/: CMakeLists.txt  main.cpp
33modul/modul_33.4/: CMakeLists.txt  main.cpp
34modul/modul_34/: CMakeLists.txt  main.cpp
36modul/modul_36/: CMakeLists.txt  circle.cpp  circle.h  main.cpp
37modul/Calculator/: CMakeLists.txt  calculator.cpp  calculator.h  calculator.ui
37modul/PlayerM37/: CMakeLists.txt  MyButton.qml  MySlider.qml  main.qml  qml.qrc
37modul/RemoteController/: CMakeLists.txt  MyButton.qml  main.qml
38modul/BlurPhotoEditor/: CMakeLists.txt  mainwidget.cpp  mainwidget.h  mainwidget.ui
38modul/HTML_editor/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
38modul/MyButton/: CMakeLists.txt  imagebutton.cpp  imagebutton.h  main.cpp
39modul/MovingCircle/: CMakeLists.txt  CMakeLists.txt.user.9558ef1.4.8-pre1  main.qml
39modul/RegExpForPhoneNumber/: CMakeLists.txt  mainwidget.cpp  mainwidget.h  mainwidget.ui
