# CMakeList.txt: проект CMake для modul_28.1; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("modul_28.1")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (modul_28.1 "modul_28.1.cpp" "swimmer.h" "swimmer.cpp")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
