# CMakeList.txt: проект CMake для modul_29.1; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("modul_29.1")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (modul_29.1 "main.cpp")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
